<resources>
    <string name="app_name">Proyectos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="titulo_proyecto">Titulo</string>
    <string name="descripcion_proyecto">Descripcion</string>
    <string name="numero_proyecto">#</string>
    <string name="texto_fecha">Fecha</string>
    <string name="texto_fecestimada">Fecha Estimada</string>
    <string name="texto_fecentrega">Fecha Entrega</string>
    <string name="texto_horas">Horas</string>
    <string name="texto_btproyectos">Guardar proyecto</string>
    <string name="texto_bttareas">Guardar tarea</string>
    <string name="texto_numproyecto">N de proyecto</string>
    <string name="texto_usuario">Usuario</string>
    <string name="texto_telefono">Telefono</string>
    <string name="texto_correo">E-mail</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_contrasena">Contraseña</string>
    <string name="texto_btusuarios">Guardar usuario</string>
    <string name="texto_admin">Admin</string>
    <string name="texto_inactivo">Usuario inactivo</string>
</resources>
